# whatthepatch

./: .env  .gitignore  .travis.yml  AUTHORS  CODE_OF_CONDUCT.md  HISTORY.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  pyproject.toml  release.nix  setup.py  shell.nix  tox.ini
.github/workflows/: build.yml  publish.yml  python-package.yml
src/whatthepatch/: patch.py
tests/: context.py  test_apply.py  test_basic.py  test_patch.py
tests/casefiles/: abc  apache-attachment-2241.diff  apache-attchment-28223.diff  context-header.diff  cvs-header.diff  diff-context-blah.diff  diff-context.diff  diff-default-blah.diff  diff-default.diff  diff-unified-bad.diff  diff-unified-bad2.diff  diff-unified-blah.diff  diff-unified.diff  diff-unified2.diff  eclipse-attachment-126343.header  eclipse-attachment-1701.patch  efg  embedded-diff.comment  git-bin.patch  git-binary-files.diff  git-header-long.diff  git-header.diff  git-new-empty-file.diff  git-oneline-add.diff  git-oneline-change.diff  git-oneline-rm.diff  git.patch  issue39-bash42-003.patch  linux-29e1dfcd5150097f32f34891c85a50d9ead19df3.patch  mozilla-252983-versionless.diff  mozilla-252983.diff  mozilla-527452-5.comment  mozilla-560291.diff  svn-context.patch  svn-default.patch  svn-ed.patch  svn-git.patch  svn-header.diff  svn-mixed_line_ends.patch  svn-rcs.patch  (+3 more)
whatthepatch/: __init__.py  apply.py  exceptions.py  patch.py  snippets.py
